Fix scrollbar position in IE

--- a/components/ScrollBar/ScrollBar.scss
+++ b/components/ScrollBar/ScrollBar.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: #e6e6e6;
   display: flex;
+  left:0;
 
   .progress-bar {
     width: 0%;
